# Anthias

./: '  .ansible-lint  .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  CONTRIBUTIONS  Config.py  Dockerfile  Dockerfile.server  Dockerfile.server.template  Dockerfile.template  Dockerfile.viewer  Dockerfile.viewer.template  Dockerfile.websocket.template  Dockerfile.websocket_server  Dockerfile.worker  LICENSE  PRIVACY_POLICY.md  Procfile  README.md  assets_helper.py  auth.py  autoplay.py  balena-host-config.json  balena.yml  bunfig.toml  celery_tasks.py  classes.py  coffeelint.json  config  conftest.py  (+60 more)
.balena/: balena.yml
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md  release.yml  stale.yml
airplay/: __init__.py  server.py
ansible/: ansible.cfg  screenly.yml  site.yml
anthias_app/: admin.py  apps.py  consumers.py  helpers.py  messaging.py  models.py  tasks.py  tests.py  urls.py  views.py  views_files.py  views_ui.py
anthias_django/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
api/: admin.py  api_docs_filter_spec.py  helpers.py  serializers.py  tests.py  urls.py
dateutils/: datestring.py
docker/: Dockerfile.airplay.j2  Dockerfile.base  Dockerfile.base.dev  Dockerfile.base.j2  Dockerfile.base.tmpl  Dockerfile.celery  Dockerfile.celery.dev  Dockerfile.celery.j2  Dockerfile.celery.template  Dockerfile.celery.tmpl  Dockerfile.dev  Dockerfile.nginx  Dockerfile.nginx.dev  Dockerfile.nginx.j2  Dockerfile.nginx.tmpl  Dockerfile.node-builder.tmpl  Dockerfile.qt5-webview-builder.j2  Dockerfile.redis  Dockerfile.redis.j2  Dockerfile.redis.template  Dockerfile.redis.tmpl  Dockerfile.server  Dockerfile.server-e  Dockerfile.server-e-e  Dockerfile.server.dev  Dockerfile.server.j2  Dockerfile.server.template  Dockerfile.server.tmpl  Dockerfile.test  Dockerfile.test.j2  Dockerfile.test.tmpl  Dockerfile.travis  Dockerfile.viewer  Dockerfile.viewer.bak  Dockerfile.viewer.j2  Dockerfile.viewer.template  Dockerfile.viewer.tmpl  Dockerfile.websocket  Dockerfile.websocket.dev  Dockerfile.websocket.j2  (+13 more)
docs/: README.md  api.md  asset-scheduling.md  balena-fleet-deployment.md  balena-fleet-host-config.md  balena.md  board-enablement.md  create-disk-image.md  create-release.md  create_disk_image.md  developer-documentation.md  http-basic-authentication.md  installation-options.md  migrating-assets-to-screenly.md  qa-checklist.md  raspberry-pi5-ssd-install-instructions.md  resin.md  roadmap.md  wifi-setup.md  wott-authentication.md  x86-installation.md
lib/: assets_helper.py  auth.py  backup_helper.py  db.py  device_helper.py  diagnostics.py  errors.py  github.py  html_templates.py  media_player.py  queries.py  raspberry_pi_helper.py  telemetry.py  unicode_configparser.py  utils.py
misc/: enable_ssl.sh  gtkrc-2.0  install.sh  lxde-rc.xml  lxde_panel  migrate.py  pisign.conf  run_upgrade.sh  screenly.conf  screenly.db  screenly.key  stunnel.conf  supervisor  supervisor_pisign.conf  supervisor_screenly.conf  supervisord.conf  uninstall.sh  upgrade.sh  uzbl.rc  wait.py  watchdog.sh  xloader.sh
raspberry_pi_imager/: Dockerfile.rpi-imager  README.md  build_pi_imager_json.py  docker-compose.pi-imager.yml
requirements/: requirements-websocket.txt  requirements.dev.txt  requirements.host.txt  requirements.local.txt  requirements.txt  requirements.viewer.txt  requirements.wifi-connect.txt
templates/: auth_basic.html  base.html  config-screenly  connectionpool.py  footer.html  head.html  header.html  hotspot.html  image-view.html  index.html  integrations.html  login.html  message.tpl  react.html  settings.html  splash-page.html  splash_page.html  splash_page.tpl  system-info.html  system_info.html
tests/: __init__.py  _seed_data.py  backup_helper_test.py  celery_tasks_test.py  conftest.py  request_test.py  scheduler_test.py  server_test.py  settings_test.py  splinter_test.py  test_app.py  test_auth.py  test_backup_helper.py  test_balena_fleet_maintenance.py  test_celery_tasks.py  test_csrf.py  test_device_helper.py  test_diagnostics.py  test_django_db_settings.py  test_django_timezone.py  test_error_pages.py  test_github.py  test_gst_fbdev_player.py  test_host_agent_board_subtype.py  test_http.py  test_login_view.py  test_media_player.py  test_messaging.py  test_migrate_legacy_paths.py  test_migrate_to_screenly.py  test_mojibake_repair.py  test_playback_envelope.py  test_processing.py  test_recheck_endpoint.py  test_remote_video.py  test_request.py  test_scheduler.py  test_sentry.py  test_server.py  test_settings.py  (+15 more)
tools/: _capture_screenshots.py  assets-migration-to-screenly-pro.py  assets-migration-to-screenly.py  migrate-assets-to-screenly.py  migrate_assets_to_screenly.py
viewer/: __init__.py  __main__.py  airplay.py  constants.py  media_player.py  messaging.py  playback.py  scheduling.py  utils.py  ws_client.py  zmq.py
views/: add_asset.tpl  edit_asset.tpl  index.haml  index.tpl  message.tpl  schedule.haml  schedule_asset.tpl  schedules_helper.py  settings.haml  shutdown.haml  splash_page.haml  splash_page.tpl  system_info.haml  system_info.tpl  (+2 more)
webview/: .gitignore  AnthiasWebview.pro  CMakeLists.txt  Dockerfile  Dockerfile.cross-compile  Dockerfile.x86  README.md  ScreenlyWebview.pro  build.sh  build_qt5.sh  build_qt6.sh  build_qtbase.sh  build_qtbase_cross_compile.sh  build_webview_with_qt5.sh  build_x86.sh  docker-compose.pi5.yml  docker-compose.x86.yml  docker-compose.yml  sysroot-relativelinks.py
webview/docker/: Dockerfile.pi4  Dockerfile.pi4-64  Dockerfile.pi5  Dockerfile.qt6  Dockerfile.x86
webview/docs/: build_webview_for_pi5.md  build_webview_using_prebuilt_qt.md
webview/res/: access_denied.html
webview/scripts/: build_pi5_webview.sh  build_webview.sh  build_x86_webview.sh  initialize_builder.sh
webview/src/: main.cpp  main.qml  main_qml.cpp  mainwindow.cpp  mainwindow.h  qml.qrc  requestinterceptor.cpp  requestinterceptor.h  screenlyinterface.cpp  screenlyinterface.h  view.cpp  view.h
(+671 files in other folders)
