[project]
name = "anthias"
version = "0.20.4"
description = "The world's most popular open source digital signage project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev-host = [
    "ansible-lint==26.4.0",
    "celery-types==0.26.0",
    "django-stubs==6.0.3",
    "djangorestframework-stubs==3.16.9",
    "mypy==1.18.2",
    "ruff==0.14.10",
    "tenacity==9.1.2",
    "types-gunicorn==25.3.0.20260408",
    "types-netifaces==0.11.0.20260408",
    "types-python-dateutil==2.9.0.20260408",
    "types-pytz==2026.1.1.20260408",
    "types-PyYAML==6.0.12.20260408",
    "types-requests==2.33.0.20260408",
]
docker-image-builder = [
    "click==8.1.7",
    "jinja2==3.1.6",
    "pygit2==1.19.1",
    "requests==2.33.1",
    "python-on-whales==0.81.0",
]
server = [
    "cec==0.2.8",
    "celery==5.6.3",
    "certifi==2025.10.5",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "Django==5.2.13",
    "djangorestframework==3.16.1",
    "django-dbbackup==5.3.0",
    "django-stubs-ext==6.0.3",
    "drf-spectacular==0.29.0",
    "hurry.filesize==0.9",
    "Jinja2==3.1.6",
    "netifaces==0.11.0",
    "psutil==7.2.1",
    "pydbus==0.6.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "redis==7.4.0",
    "requests==2.33.1",
    "tenacity==9.1.2",
    "sh==2.2.2",
    "urllib3==2.6.3",
    "uvicorn[standard]==0.32.1",
    "whitenoise==6.12.0",
    "yt-dlp>=2026.3.17",
]
viewer = [
    "cec==0.2.8",
    "certifi==2025.10.5",
    "Django==5.2.13",
    "Jinja2==3.1.6",
    "netifaces==0.11.0",
    "pydbus==0.6.0",
    "python-dateutil==2.9.0.post0",
    "python-vlc==3.0.21203",
    "pytz==2025.2",
    "redis==7.4.0",
    "requests==2.33.1",
    "tenacity==9.1.2",
    "sh==2.2.2",
    "urllib3==2.6.3",
]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-django==4.10.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1",
    "selenium==4.36.0",
    "splinter==0.21.0",
    "time-machine==2.15.0",
]
host = [
    "ansible-core==2.19.9",
    "getmac==0.9.5",
    "netifaces2==0.0.22",
    "redis==7.4.0",
    "requests==2.33.1",
    "tenacity==9.1.2",
]
local = [
    "click==8.1.7",
    "requests==2.33.1",
    "tenacity==9.1.2",
]
website = [
    "pytest==8.3.5",
    "requests==2.33.1",
]
test = [
    { include-group = "server" },
    { include-group = "viewer" },
    { include-group = "dev" },
]
# Used by the python-mypy CI job. The django-stubs plugin imports
# anthias_django.settings to introspect the app registry, so we need the
# runtime deps that settings touches — but not the heavy native-extension
# deps from the server group (cec, netifaces, etc.). We also include
# docker-image-builder so its tools (pygit2, python_on_whales) resolve.
mypy = [
    { include-group = "dev-host" },
    { include-group = "docker-image-builder" },
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "Django==5.2.13",
    "django-dbbackup==5.3.0",
    "django-stubs-ext==6.0.3",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "pytz==2025.2",
    "whitenoise==6.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "anthias_django.settings"
testpaths = ["tests", "api/tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = [
    "anthias_app",
    "api",
    "celery_tasks",
    "lib",
    "settings",
    "viewer",
]
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "anthias_django/asgi.py",
    "anthias_django/routing.py",
    "anthias_django/urls.py",
    "anthias_django/wsgi.py",
    "anthias_app/management/*",
    "bin/*",
    "host_agent.py",
    "raspberry_pi_imager/*",
    "tools/image_builder/*",
    "viewer/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.13"
strict = true
follow_imports = "normal"
mypy_path = "stubs"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = [
    "^\\.venv/",
    "^node_modules/",
    "/migrations/",
    "^static/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
# Third-party libs without type stubs. Listed explicitly so a future stub
# release is noticed (and the override removed) instead of silently ignored.
# `channels` itself is covered by partial PEP 561 stubs in stubs/channels-stubs/;
# only the helpers we actually call are typed there.
module = [
    "cec",
    "channels_redis.*",
    "hurry.filesize",
    "pydbus",
    "sh",
    "splinter",
    "vlc",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "anthias_django.settings"
